respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/SCP_Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Container Type</label>
        <referenceTo>Container_Type__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_Descr__c</fullName>
        <formula>Container_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Descr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Equipment</label>
    <nameField>
        <label>Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>